--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@types/chart.js": "^2.4.8",
+    "@types/googlemaps": "^3.26.16",
+    "angular2-google-maps": "^0.17.0",
     "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
     "ng2-charts": "^1.6.0",
@@ -32,6 +34,7 @@
     "@angular/cli": "1.1.3",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
+    "@types/googlemaps": "^3.26.16",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
